--- a/Source/gradation.rc
+++ b/Source/gradation.rc
@@ -52,16 +52,16 @@ END
 // Dialog
 //
 
-IDD_FILTER DIALOG DISCARDABLE  0, 0, 235, 319
+IDD_FILTER DIALOG DISCARDABLE  0, 0, 235, 322
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Filter: Gradation Curves"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,68,298,50,13
-    PUSHBUTTON      "Cancel",IDCANCEL,12,298,50,13
-    PUSHBUTTON      "Show Preview",IDPREVIEW,12,281,50,13
-    PUSHBUTTON      "Reset",IDC_RESET,12,251,50,13
-    PUSHBUTTON      "Invert",IDC_INVERT,68,251,50,13
+    DEFPUSHBUTTON   "OK",IDOK,68,301,50,13
+    PUSHBUTTON      "Cancel",IDCANCEL,12,301,50,13
+    PUSHBUTTON      "Show Preview",IDPREVIEW,12,284,50,13
+    PUSHBUTTON      "Reset",IDC_RESET,12,252,50,13
+    PUSHBUTTON      "Invert",IDC_INVERT,68,252,50,13
     CONTROL         "Slider1",IDC_SVALUE,"msctls_trackbar32",TBS_TOP |
                     TBS_NOTICKS | WS_TABSTOP,22,206,190,17
     LTEXT           "Output Value:",IDC_STATIC,132,232,43,8
@@ -92,7 +92,9 @@ BEGIN
                     BS_AUTORADIOBUTTON,132,290,89,8
     CONTROL         "no processing",IDC_OFF,"Button",BS_AUTORADIOBUTTON,132,
                     299,60,8
-    PUSHBUTTON      "Help",IDHELP,68,281,50,13
+    PUSHBUTTON      "Help",IDHELP,68,284,50,13
+    PUSHBUTTON      "Import",IDIMPORT,12,268,50,13
+    PUSHBUTTON      "Export",IDEXPORT,68,268,49,13
 END
 
 
@@ -116,14 +118,14 @@ BEGIN
         VERTGUIDE, 150
         VERTGUIDE, 204
         TOPMARGIN, 7
-        BOTTOMMARGIN, 311
+        BOTTOMMARGIN, 314
         HORZGUIDE, 27
         HORZGUIDE, 86
         HORZGUIDE, 188
         HORZGUIDE, 195
         HORZGUIDE, 214
         HORZGUIDE, 236
-        HORZGUIDE, 251
+        HORZGUIDE, 252
     END
 END
 #endif    // APSTUDIO_INVOKED
