--- a/Source/gradation.rc
+++ b/Source/gradation.rc
@@ -63,7 +63,7 @@ BEGIN
     PUSHBUTTON      "Reset",IDC_RESET,12,252,50,13
     PUSHBUTTON      "Invert",IDC_INVERT,68,252,50,13
     CONTROL         "Slider1",IDC_SVALUE,"msctls_trackbar32",TBS_TOP |
-                    TBS_NOTICKS | WS_TABSTOP,22,206,190,17
+                    TBS_NOTICKS | WS_TABSTOP,21,206,190,17
     LTEXT           "Output Value:",IDC_STATIC,132,232,43,8
     LTEXT           "",IDC_OUTPUTVALUE,190,232,14,8
     LTEXT           "Input Value:",IDC_STATIC,29,232,39,8
@@ -75,12 +75,12 @@ BEGIN
     RTEXT           "Channel:",IDC_STATIC,36,7,32,13,SS_CENTERIMAGE
     COMBOBOX        IDC_CHANNEL,77,7,69,58,CBS_DROPDOWN | WS_VSCROLL |
                     WS_TABSTOP
-    LTEXT           "",IDC_GRADCURVE,29,27,175,161,SS_SUNKEN | WS_BORDER |
-                    NOT WS_GROUP
-    CONTROL         "",IDC_HBORDER,"Static",SS_GRAYRECT | SS_SUNKEN |
-                    WS_BORDER,29,195,175,9
-    CONTROL         "",IDC_VBORDER,"Static",SS_GRAYRECT | SS_SUNKEN |
-                    WS_BORDER,12,27,10,161
+    CONTROL         "",IDC_GRADCURVE,"BBFilterWindow",WS_BORDER | WS_GROUP |
+                    0x1000,29,27,174,160
+    CONTROL         "",IDC_HBORDER,"Static",SS_GRAYRECT | WS_BORDER,29,195,
+                    174,9
+    CONTROL         "",IDC_VBORDER,"Static",SS_GRAYRECT | WS_BORDER,12,27,10,
+                    160
     GROUPBOX        "Processing",IDC_STATIC,127,250,98,61
     CONTROL         "RGB only",IDC_RGB,"Button",BS_AUTORADIOBUTTON,132,261,
                     47,8
@@ -121,7 +121,7 @@ BEGIN
         BOTTOMMARGIN, 314
         HORZGUIDE, 27
         HORZGUIDE, 86
-        HORZGUIDE, 188
+        HORZGUIDE, 187
         HORZGUIDE, 195
         HORZGUIDE, 214
         HORZGUIDE, 236
