--- a/Source/gradation.rc
+++ b/Source/gradation.rc
@@ -72,8 +72,8 @@ BEGIN
     PUSHBUTTON      "-",IDC_INPUTMINUS,216,214,9,9
     PUSHBUTTON      "+",IDC_OUTPUTPLUS,216,227,9,9
     PUSHBUTTON      "-",IDC_OUTPUTMINUS,216,236,9,9
-    RTEXT           "Channel:",IDC_STATIC,36,7,32,13,SS_CENTERIMAGE
-    COMBOBOX        IDC_CHANNEL,77,7,69,58,CBS_DROPDOWN | WS_VSCROLL |
+    RTEXT           "Channel:",IDC_STATIC,12,7,29,13,SS_CENTERIMAGE
+    COMBOBOX        IDC_CHANNEL,46,7,69,58,CBS_DROPDOWN | WS_VSCROLL |
                     WS_TABSTOP
     CONTROL         "",IDC_GRADCURVE,"BBFilterWindow",WS_BORDER | WS_GROUP |
                     0x1000,29,27,174,160
@@ -81,20 +81,19 @@ BEGIN
                     174,9
     CONTROL         "",IDC_VBORDER,"Static",SS_GRAYRECT | WS_BORDER,12,27,10,
                     160
-    GROUPBOX        "Processing",IDC_STATIC,127,250,98,61
-    CONTROL         "RGB only",IDC_RGB,"Button",BS_AUTORADIOBUTTON,132,261,
-                    47,8
-    CONTROL         "RGB + R/G/B",IDC_FULL,"Button",BS_AUTORADIOBUTTON,132,
-                    270,72,8
-    CONTROL         "RGB weighted",IDC_RGBW,"Button",BS_AUTORADIOBUTTON,132,
-                    280,64,8
-    CONTROL         "RGB weighted + R/G/B",IDC_FULLW,"Button",
-                    BS_AUTORADIOBUTTON,132,290,89,8
-    CONTROL         "no processing",IDC_OFF,"Button",BS_AUTORADIOBUTTON,132,
-                    299,60,8
+     GROUPBOX        "Processing",IDC_STATIC,127,250,98,61
+    CONTROL         "",IDC_RGB,"Button",BS_AUTORADIOBUTTON,132,261,85,8
+    CONTROL         "",IDC_FULL,"Button",BS_AUTORADIOBUTTON,132,270,83,8
+    CONTROL         "",IDC_RGBW,"Button",BS_AUTORADIOBUTTON,132,280,85,8
+    CONTROL         "",IDC_FULLW,"Button",BS_AUTORADIOBUTTON,132,290,89,8
+    CONTROL         "",IDC_OFF,"Button",BS_AUTORADIOBUTTON,132,299,87,8
     PUSHBUTTON      "Help",IDHELP,68,284,50,13
     PUSHBUTTON      "Import",IDIMPORT,12,268,50,13
     PUSHBUTTON      "Export",IDEXPORT,68,268,49,13
+    PUSHBUTTON      "Smooth",IDC_SMOOTH,12,236,50,13
+    RTEXT           "Space:",IDC_STATIC,120,7,24,13,SS_CENTERIMAGE
+    COMBOBOX        IDC_SPACE,150,7,54,61,CBS_DROPDOWN | WS_VSCROLL |
+                    WS_TABSTOP
 END
 
 
@@ -139,6 +138,8 @@ END
 IDD_FILTER DLGINIT
 BEGIN
     IDC_CHANNEL, 0x403, 1, 0
+"\000"
+    IDC_SPACE, 0x403, 1, 0
 "\000"
     0
 END
