--- a/Source/gradation.rc
+++ b/Source/gradation.rc
@@ -61,7 +61,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,12,301,50,13
     PUSHBUTTON      "Show Preview",IDPREVIEW,12,284,50,13
     PUSHBUTTON      "Reset",IDC_RESET,12,252,50,13
-    PUSHBUTTON      "Invert",IDC_INVERT,68,252,50,13
+    PUSHBUTTON      "Invert",IDC_INVERTX,68,252,50,13
     CONTROL         "Slider1",IDC_SVALUE,"msctls_trackbar32",TBS_TOP |
                     TBS_NOTICKS | WS_TABSTOP,21,206,190,17
     LTEXT           "Output Value:",IDC_STATIC,141,232,43,8
@@ -94,6 +94,10 @@ BEGIN
     RTEXT           "Space:",IDC_STATIC,12,7,24,13,SS_CENTERIMAGE
     COMBOBOX        IDC_SPACE,39,7,54,79,CBS_DROPDOWN | WS_VSCROLL |
                     WS_TABSTOP
+    PUSHBUTTON      "P",IDC_BUTTONPM,210,25,15,14
+    PUSHBUTTON      "L",IDC_BUTTONLM,210,45,15,14
+    PUSHBUTTON      "S",IDC_BUTTONSM,210,65,15,14
+    PUSHBUTTON      "G",IDC_BUTTONGM,210,85,15,14
 END
 
 
