--- a/Source/gradation.rc
+++ b/Source/gradation.rc
@@ -62,16 +62,14 @@ BEGIN
     PUSHBUTTON      "Show Preview",IDPREVIEW,12,284,50,13
     PUSHBUTTON      "Reset",IDC_RESET,12,252,50,13
     PUSHBUTTON      "Invert",IDC_INVERTX,68,252,50,13
-    CONTROL         "Slider1",IDC_SVALUE,"msctls_trackbar32",TBS_TOP |
-                    TBS_NOTICKS | WS_TABSTOP,21,206,190,17
-    LTEXT           "Output Value:",IDC_STATIC,141,232,43,8
-    LTEXT           "",IDC_OUTPUTVALUE,190,232,14,8
-    LTEXT           "Input Value:",IDC_STATIC,68,232,39,8
-    LTEXT           "",IDC_VALUE,112,232,20,8
-    PUSHBUTTON      "+",IDC_INPUTPLUS,216,205,9,9
-    PUSHBUTTON      "-",IDC_INPUTMINUS,216,214,9,9
-    PUSHBUTTON      "+",IDC_OUTPUTPLUS,216,227,9,9
-    PUSHBUTTON      "-",IDC_OUTPUTMINUS,216,236,9,9
+    LTEXT           "Output Value:",IDC_STATIC,99,209,43,8
+    LTEXT           "",IDC_OUTPUTVALUE,129,220,14,8
+    LTEXT           "Input Value:",IDC_STATIC,49,209,39,8
+    LTEXT           "",IDC_VALUE,75,220,20,8
+    PUSHBUTTON      "+",IDC_INPUTPLUS,59,220,9,9
+    PUSHBUTTON      "-",IDC_INPUTMINUS,49,220,9,9
+    PUSHBUTTON      "+",IDC_OUTPUTPLUS,109,220,9,9
+    PUSHBUTTON      "-",IDC_OUTPUTMINUS,99,220,9,9
     RTEXT           "Channel:",IDC_STATIC,103,7,29,13,SS_CENTERIMAGE
     COMBOBOX        IDC_CHANNEL,135,7,69,58,CBS_DROPDOWN | WS_VSCROLL |
                     WS_TABSTOP
@@ -98,6 +96,12 @@ BEGIN
     PUSHBUTTON      "L",IDC_BUTTONLM,210,45,15,14
     PUSHBUTTON      "S",IDC_BUTTONSM,210,65,15,14
     PUSHBUTTON      "G",IDC_BUTTONGM,210,85,15,14
+    RTEXT           "",IDC_GAMMAVALUE,180,210,31,8,NOT WS_VISIBLE
+    RTEXT           "Gamma:",IDC_GAMMADSC,150,210,27,8,NOT WS_VISIBLE
+    LTEXT           "Point:",IDC_POINT,12,210,19,8
+    PUSHBUTTON      "-",IDC_POINTMINUS,12,221,9,9
+    PUSHBUTTON      "+",IDC_POINTPLUS,22,221,9,9
+    LTEXT           "",IDC_POINTNO,34,210,9,8
 END
 
 
