--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,21 @@ add_library(gradation-vd SHARED
     Source/vd.cpp
 )
 
-target_compile_definitions(gradation-vd PRIVATE
-    _CRT_SECURE_NO_WARNINGS
-)
-
-target_link_libraries(gradation-vd PRIVATE
-    Comctl32
-)
-
 set_target_properties(gradation-vd PROPERTIES OUTPUT_NAME "gradation")
 set_target_properties(gradation-vd PROPERTIES SUFFIX ".vdf")
+
+if (WIN32)
+    target_compile_definitions(gradation-vd PRIVATE
+        _CRT_SECURE_NO_WARNINGS
+    )
+    target_link_libraries(gradation-vd PRIVATE
+        Comctl32
+    )
+endif()
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(gradation-vd PRIVATE
+        /Zc:__cplusplus
+        /Zc:inline
+    )
+endif()
