Add 64-bit support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ add_library(gradation-vd SHARED
 set_target_properties(gradation-vd PROPERTIES OUTPUT_NAME "gradation")
 set_target_properties(gradation-vd PROPERTIES SUFFIX ".vdf")
 
+target_include_directories(gradation-vd PRIVATE
+    "${CMAKE_CURRENT_LIST_DIR}/include"
+    "${CMAKE_CURRENT_LIST_DIR}/include/vd2/OldFilterSdk"
+)
+
 if (WIN32)
     target_compile_definitions(gradation-vd PRIVATE
         _CRT_SECURE_NO_WARNINGS
